# configuration-driven-rest-api

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
configs/: config.toml  easy.toml  example.toml  shop.toml  user.toml
configs/api/: easy.yml  test.yml
settings/api/: base.yml  deserialized_from_test_values.yml  test.yml
src/: api.rs  config.rs  confighandling.rs  db.rs  io.rs  main.rs  setup.rs  specification.rs
src/api/: filter.rs  networking.rs  server.rs
src/api/database/: db.rs
src/api/networking/: filter.rs  methods.rs  server.rs
src/config/: loader.rs  tracker.rs
src/confighandling/: structures.rs
src/confighandling/filehandling/: loader.rs  tracker.rs
src/confighandling/structures/: toml.rs  yaml.rs
src/db/: migrations.rs  pool.rs
src/db/queries/: dummy.rs
src/io/: design.rs  loader.rs  setup.rs
src/io/design/: loader.rs  tracker.rs  yaml.rs
src/networking/: api.rs
src/notify/: loader.rs  tracker.rs
src/specification/: legacy.rs  spec.rs
