[package]
name = "declarative-rest-api-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15.7"
notify = "8.2.0"
serde = { version = "1.0", features = ["derive"] }
serde-saphyr = "0.0.10"
sqlx = { version = "0.8.6", features = ["sqlite", "macros", "runtime-tokio"] }
tokio = { version = "1.48.0", features = ["full"] }
toml = "0.9.8"
warp = { version = "0.4.2", features = ["server"] }

[features]
default = ["database"]
loading = []
tracker = ["loading"]
database = []
http = []
